# Salette

./: .gitignore  CMakeLists.txt  DESIGN_MEMO.md  README.md  designdoc.md  jynx.sublime-workspace  legacy_CMakeLists.txt  main.cpp  run.sh  runtests.sh
SGEsrc/: config.h  main.cpp  material.cpp  material.h  triangleMesh.cpp  triangleMesh.h
SGEsrc/shaders/: fragment.glsl  vertex.glsl
dependencies/clio/: clio.hpp
dependencies/glad/include/glad/: glad.h
gtests/: gtestmain.cpp
gtests/windowmanager/: OpenGLWindowHandleTest.cpp  OpenGLWindowHandleTest.h  WindowManagerTest.cpp  WindowManagerTest.h
include/core/: app.h  config.h  includes.h
include/events/: inputHandler.h
include/factory/: PrimitiveModelFactory.h  factory.h
include/renderer/: IRenderer.h  InterfaceRenderer.h  OpenGL.h  OpenGLRenderContext.h  OpenGLRenderer.h  PrimitiveModel.h
include/shader/: IShader.h  IShaderLinker.h  OpenGLShader.h  OpenGLShaderLinker.h  shaderLinker.h
include/windowmanager/: OpenGLWindowHandle.h  WindowHandle.h  WindowManager.h
logs/: build_logs.txt  test_build_logs.txt  test_runtime_logs.txt
shaders/: fragment.glsl  vertex.glsl
src/: config.h  main.cpp
src/components/: cameraComponent.h  physicsComponent.h  renderComponent.h  transformComponent.h
src/controller/: engine.cpp  engine.h  test.cpp  test.h
src/core/: app.cpp  app.h  config.cpp  includes.cpp
src/events/: inputHandler.cpp  inputHandler.h  keyboard.h
src/factory/: PrimitiveModelFactory.cpp  factory.cpp  factory.h
src/renderer/: OpenGL.cpp  OpenGLRenderContext.cpp  OpenGLRenderer.cpp  PrimitiveModel.cpp
src/shader/: OpenGLShader.cpp  OpenGLShaderLinker.cpp  shaderLinker.cpp
src/shaderapps/: shaderapps.cpp  shaderapps.h
src/shaders/: fragment.glsl  shaderapps.cpp  shaderapps.h  vertex.glsl
src/systems/: cameraSystem.cpp  cameraSystem.h  motionSystem.cpp  motionSystem.h  renderSystem.cpp  renderSystem.h
src/windowmanager/: OpenGLWindowHandle.cpp  WindowManager.cpp
src2/: config.h  glad.c
src2/events/: keyboard.cpp
tests/: testmain.cpp
tests/windowmanager/: OpenGLWindowHandleTest.cpp  OpenGLWindowHandleTest.h  WindowManagerTest.cpp  WindowManagerTest.h
